fix(todoReport): minor bugs improvement feat(todoReport): implement pagination and filteration in getAll api
